[package]
name = "advanced-portchecker"
version = "2.3.0"
description = "A lightweight TCP/IP port scanner with an intuitive UI."
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/CodeDead/Advanced-PortChecker"
default-run = "advanced-portchecker"
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
open = "5.3.3"
chrono = "0.4.43"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-os = "2.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
